# MOGAL

./: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README  README.md  TODO  autogen.sh  builddist.sh  configure.in
cmake/: FindENUt.cmake  FindErrUt.cmake  MOGALConfig.cmake.in
doc/: Makefile.am  beta.gnuplot  mainpage.h
examples/: distmain.cpp  distmodule.cpp  distparams.cpp  distparams.h  mpidistmain.cpp  multi.cpp  single.cpp
pkgconfig/: Makefile.am  mogal-uninstalled.pc.in  mogal.pc.in
programs/: CMakeLists.txt  createGATemplate.sh  gahelper.cpp  gaserver.cpp  gaserver2.cpp  log.cpp  log.h  mpigaserver.cpp
src/: CMakeLists.txt  Makefile.am  createGATemplate.sh  cudandsort.cu  doublevectorgafactory.cpp  doublevectorgafactory.h  doublevectorgafactoryparams.cpp  doublevectorgafactoryparams.h  doublevectorgenome.cpp  doublevectorgenome.h  gafactory.h  gafactorydefaults.cpp  gafactorydefaults.h  gafactorymultiobjective.cpp  gafactorymultiobjective.h  gafactorysingleobjective.cpp  gafactorysingleobjective.h  gahelper.cpp  gamodule.cpp  gamodule.h  gaserver.cpp  gaserver.h  geneticalgorithm.cpp  geneticalgorithm.h  genome.h  log.cpp  log.h  loglevels.h  modulebase.cpp  modulebase.h  mogalconfig.h.in  mpigeneticalgorithm.cpp  mpigeneticalgorithm.h  randomnumbergenerator.cpp  randomnumbergenerator.h
src/old/: gaihelper.cpp  gaiserver.cpp
