cmake_minimum_required(VERSION 2.8)
if (POLICY CMP0042)
	cmake_policy(SET CMP0042 NEW)
endif()

project(mogal)
set(VERSION 0.12.1)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

include(CheckCXXSourceCompiles)
include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)

set(MOGAL_EXTERNAL_INCLUDES "")
set(MOGAL_INTERNAL_INCLUDES "")
set(MOGAL_LINK_LIBS "")

add_additional_stuff(MOGAL_EXTERNAL_INCLUDES MOGAL_LINK_LIBS)
get_install_directory(LIBRARY_INSTALL_DIR)

find_package(ErrUt REQUIRED)
list(APPEND MOGAL_EXTERNAL_INCLUDES "${ERRUT_INCLUDE_DIRS}")
list(APPEND MOGAL_LINK_LIBS "${ERRUT_LIBRARIES}")

find_package(ENUt REQUIRED)
list(APPEND MOGAL_LINK_LIBS "${ENUT_LIBRARIES}")
list(APPEND MOGAL_EXTERNAL_INCLUDES "${ENUT_INCLUDE_DIRS}")

find_package(SerUt REQUIRED)
list(APPEND MOGAL_LINK_LIBS "${SERUT_LIBRARIES}")
list(APPEND MOGAL_EXTERNAL_INCLUDES "${SERUT_INCLUDE_DIRS}")

check_cxx_source_compiles("#include <windows.h>\nint main(void)\n{\nHMODULE x = LoadLibrary(\"x.dll\");\nreturn 0;\n}\n" TMP_LOADLIBRARY_CHECK)
if (TMP_LOADLIBRARY_CHECK)
	set(MOGALCONFIG_LOADLIBRARY "#define MOGALCONFIG_LOADLIBRARY")
else (TMP_LOADLIBRARY_CHECK)
	find_path(MOGAL_DLFCN dlfcn.h)
	if (MOGAL_DLFCN)
		list(APPEND MOGAL_LINK_LIBS "-ldl")
	else(MOGAL_DLFCN)
		message(ERROR "The LoadLibrary function is not available and dlfcn.h was not found")
	endif(MOGAL_DLFCN)
	set(MOGALCONFIG_LOADLIBRARY "// Using dlopen")
endif (TMP_LOADLIBRARY_CHECK)

find_path(MOGAL_HAVE_NETINET_TCP_H netinet/tcp.h)
if (MOGAL_HAVE_NETINET_TCP_H)
	set(MOGALCONFIG_NETINET_TCP_H "#define MOGALCONFIG_NETINET_TCP_H")
else ()
	set(MOGALCONFIG_NETINET_TCP_H "// netinet/tcp.h not available")
endif ()

set (TMP "\nint main(void)\n{\n int val = TCP_KEEPIDLE; return 0; \n}\n")
if (MOGAL_HAVE_NETINET_TCP_H)
	set (TMP "\n#include <netinet/tcp.h>${TMP}")
endif()
if (TMP_LOADLIBRARY_CHECK) # TODO: for now, we'll use this as a windows.h check as well
	set (TMP "\n#include <windows.h>${TMP}")
endif()
check_cxx_source_compiles("${TMP}" TMP_TCPKEEPALIVEOPTS_CHECK)
if (TMP_TCPKEEPALIVEOPTS_CHECK)
	set(MOGALCONFIG_TCPKEEPALIVEPARAMS "#define MOGALCONFIG_TCPKEEPALIVEPARAMS")
else ()
	set(MOGALCONFIG_TCPKEEPALIVEPARAMS "// TCP socket keep-alive options not available")
endif ()

#option(MOGAL_SUPPORT_CUDA "Enable CUDA support for faster non-dominated sorting" FALSE)
#if (MOGAL_SUPPORT_CUDA)
#	add_definitions(-DMOGAL_USECUDA)
#endif (MOGAL_SUPPORT_CUDA)

find_package(MPI)
if (MPI_FOUND)
	set(TMP TRUE)
else (MPI_FOUND)
	set(TMP FALSE)
endif (MPI_FOUND)
option(MOGAL_SUPPORT_MPI "Enable MPI support" ${TMP})
if (MOGAL_SUPPORT_MPI)
	if (MPI_FOUND)
		list(APPEND MOGAL_LINK_LIBS "${MPI_LIBRARIES}")
		list(APPEND MOGAL_INTERNAL_INCLUDES "${MPI_INCLUDE_PATH}")
	endif (MPI_FOUND)
	set(MOGALCONFIG_MPISUPPORT "#define MOGALCONFIG_MPISUPPORT")
else (MOGAL_SUPPORT_MPI)
	set(MOGALCONFIG_MPISUPPORT "// No MPI support")
endif (MOGAL_SUPPORT_MPI)

if (MSVC)
	set(MOGAL_COMPILE_STATIC ON CACHE BOOL "Flag indicating if a static library should be built, or a dynamic one")
endif (MSVC)
if (NOT MSVC OR MOGAL_COMPILE_STATIC)
	set(MOGAL_IMPORT "")
	set(MOGAL_EXPORT "")
else (NOT MSVC OR MOGAL_COMPILE_STATIC)
	set(MOGAL_IMPORT "__declspec(dllimport)")
	set(MOGAL_EXPORT "__declspec(dllexport)")
endif (NOT MSVC OR MOGAL_COMPILE_STATIC)

configure_file("${PROJECT_SOURCE_DIR}/src/mogalconfig.h.in" "${PROJECT_BINARY_DIR}/src/mogalconfig.h")

list(APPEND MOGAL_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/src/")
list(APPEND MOGAL_INTERNAL_INCLUDES "${PROJECT_BINARY_DIR}/src/")

add_subdirectory(src)
add_subdirectory(programs)

if (NOT MSVC)
	set(MOGAL_LIBS "-L${LIBRARY_INSTALL_DIR}" "-lmogal")
else (NOT MSVC)
	set(MOGAL_LIBS optimized "${LIBRARY_INSTALL_DIR}/mogal.lib" 
		       debug "${LIBRARY_INSTALL_DIR}/mogal_d.lib")
endif (NOT MSVC)

set(MOGAL_INCDIRS "${MOGAL_EXTERNAL_INCLUDES};${CMAKE_INSTALL_PREFIX}/include")
set(MOGAL_LIBS "${MOGAL_LIBS};${MOGAL_LINK_LIBS}")
remove_empty(MOGAL_INCDIRS)
list(REMOVE_DUPLICATES MOGAL_INCDIRS)
remove_empty(MOGAL_LIBS)

foreach(ARG ${MOGAL_LIBS})
	set(MOGAL_LIBS_CMAKECONFIG "${MOGAL_LIBS_CMAKECONFIG} \"${ARG}\"")
endforeach()
foreach(ARG ${MOGAL_INCDIRS})
	set(MOGAL_INCDIRS_CMAKECONFIG "${MOGAL_INCDIRS_CMAKECONFIG} \"${ARG}\"")
endforeach()

configure_file("${PROJECT_SOURCE_DIR}/cmake/MOGALConfig.cmake.in" "${PROJECT_BINARY_DIR}/cmake/MOGALConfig.cmake")
install(FILES "${PROJECT_BINARY_DIR}/cmake/MOGALConfig.cmake" 
	DESTINATION ${LIBRARY_INSTALL_DIR}/cmake/MOGAL)

