apply_include_paths("${MOGAL_INTERNAL_INCLUDES}")
apply_include_paths("${MOGAL_EXTERNAL_INCLUDES}")

foreach(IDX gahelper gaserver gaserver2)
	add_executable(${IDX} ${IDX}.cpp log.cpp)
	if (UNIX OR MOGAL_COMPILE_STATIC)
		target_link_libraries(${IDX} mogal-static ${MOGAL_LINK_LIBS})
	else ()
		target_link_libraries(${IDX} mogal-shared ${MOGAL_LINK_LIBS})
	endif (UNIX OR MOGAL_COMPILE_STATIC)
	install(TARGETS ${IDX} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
endforeach(IDX)

if (MOGAL_SUPPORT_MPI)
	if (MPI_FOUND)
		include_directories("${MPI_INCLUDE_PATH}")
	endif (MPI_FOUND)
	add_executable(mpigaserver mpigaserver.cpp log.cpp)

	if (MPI_FOUND)
		if (UNIX OR MOGAL_COMPILE_STATIC)
			target_link_libraries(mpigaserver mogal-static ${MOGAL_LINK_LIBS} ${MPI_LIBRARIES})
		else ()
			target_link_libraries(mpigaserver mogal-shared ${MOGAL_LINK_LIBS} ${MPI_LIBRARIES})
		endif (UNIX OR MOGAL_COMPILE_STATIC)
		
		get_target_property(TMP mpigaserver COMPILE_FLAGS)
		list(APPEND TMP "${MPI_COMPILE_FLAGS}")
		remove_empty(TMP)
		set_target_properties(mpigaserver PROPERTIES COMPILE_FLAGS "${TMP}")
		
		get_target_property(TMP mpigaserver LINK_FLAGS)
		list(APPEND TMP "${MPI_LINK_FLAGS}")
		remove_empty(TMP)
		set_target_properties(mpigaserver PROPERTIES LINK_FLAGS "${TMP}")
	else ()
		if (UNIX OR MOGAL_COMPILE_STATIC)
			target_link_libraries(mpigaserver mogal-static ${MOGAL_LINK_LIBS})
		else ()
			target_link_libraries(mpigaserver mogal-shared ${MOGAL_LINK_LIBS})
		endif (UNIX OR MOGAL_COMPILE_STATIC)
	endif (MPI_FOUND)
	install(TARGETS mpigaserver DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
endif (MOGAL_SUPPORT_MPI)

install(FILES createGATemplate.sh DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
